tests/transpiler/x/hs/bool_chain.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/bool_chain.hs:10:40: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘IO Bool’
    • In the second argument of ‘(&&)’, namely ‘boom’
      In the second argument of ‘(&&)’, namely ‘(2 > 3) && boom’
      In the expression: (1 < 2) && (2 > 3) && boom
   |
10 |     putStrLn (if (1 < 2) && (2 > 3) && boom then "true" else "false")
   |                                        ^^^^

/workspace/mochi/tests/transpiler/x/hs/bool_chain.hs:11:51: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘IO Bool’
    • In the second argument of ‘(&&)’, namely ‘boom’
      In the second argument of ‘(&&)’, namely ‘(3 > 4) && boom’
      In the second argument of ‘(&&)’, namely
        ‘(2 < 3) && (3 > 4) && boom’
   |
11 |     putStrLn (if (1 < 2) && (2 < 3) && (3 > 4) && boom then "true" else "false")
   |                                                   ^^^^
