tests/transpiler/x/hs/bool_chain.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-20 10:18 GMT+7
boom = do
    putStrLn ("boom")
    return (True)


main :: IO ()
main = do
    putStrLn (if (1 < 2) && (2 < 3) && (3 < 4) then "true" else "false")
    putStrLn (if (1 < 2) && (2 > 3) && boom then "true" else "false")
    putStrLn (if (1 < 2) && (2 < 3) && (3 > 4) && boom then "true" else "false")
